--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -17,7 +17,7 @@
 {% block javascript %}
 
     <script type="text/javascript">
-
+        {% include "shortener.js" %}
     </script> <!-- shortener script -->
 
 {% endblock javascript %}
